--- a/index.html
+++ b/index.html
@@ -14,10 +14,17 @@
         <link rel="icon" href="favicon.ico">
     </head>
     <body>
-        <div class="about-me">
-        <h1 id="name">I'm Shreyash</h1>
-        <p>I like programming</p>
+        <div class="top-container">
+            <img class="top-cloud"  src="images/cloud.png" alt="">
+            <div class="Name">
+                <h1 >I'm Shreyash</h1>
+                <p>I like <span class="pro">pro</span>gramming</p>
+            </div>
+        <img class="bottom-cloud" src="images/cloud.png" alt="">
+        <img class="mountain" src="images/mountain.png" alt="">
         </div>
+
+        
 
         
         <script src="" async defer></script>
