--- a/index.html
+++ b/index.html
@@ -4,29 +4,76 @@
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
 <!--[if gt IE 8]>      <html class="no-js"> <!--<![endif]-->
 <html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Shreyash's Website</title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="css/styles.css">
-        <link rel="icon" href="favicon.ico">
-    </head>
-    <body>
-        <div class="top-container">
-            <img class="top-cloud"  src="images/cloud.png" alt="">
-            <div class="Name">
-                <h1 >I'm Shreyash</h1>
-                <p>I like <span class="pro">pro</span>gramming</p>
-            </div>
+
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Shreyash's Website</title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="icon" href="favicon.ico">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Merriweather+Sans&family=Montserrat&family=Sacramento&display=swap"
+        rel="stylesheet">
+</head>
+
+<body>
+    <div class="top-container">
+        <img class="top-cloud" src="images/cloud.png" alt="">
+        <div class="Name">
+            <h1 style="font-family:'Sacramento', cursive; font-size: 565.25%; margin: 0 auto 0 auto; color: #66BFBF; margin-bottom: 0px;">I'm Shreyash</h1>
+            <h2 style="font-size: 2.5rem; color:#66BFBF">I like <span class="pro">pro</span>gramming</h2>
+        </div>
         <img class="bottom-cloud" src="images/cloud.png" alt="">
         <img class="mountain" src="images/mountain.png" alt="">
+    </div>
+    <div class="middle-container">
+        <div class="profile">
+            <img src="boy.png" alt="Me" style="height: 100px; width:100px; margin-top: 50px;">
+            <h2>Hello.</h2>
+            <p>I am Web developer and know languages like C, C++, Python.I am currently learning App Development and besides coding I like to cook and play Badminton
+            </p>
         </div>
+        <hr>
+        <div class="skills">
+            <h2>My Skills.</h2>
+            <div class="skill-row">
+                <img class="" src="pattern.gif" style="height:50px; width:50px;" alt="">
+                <h3>Lorem & Ipsum</h3>
+                <p>Lorem ipsum dolor sit amet, quis in duis, iaculis id felis. Consectetuer vestibulum, nunc urna
+                    lectus, erat ligula. Hendrerit nam, lectus ante, ut lorem eros.</p>
+            </div>
+            <div class="skill-row">
+                <img class="" src="images/chili-pepper.png"   alt="" style="height:150px; width:150px;">
+                <h3>What I like?</h3>
+                <p>I love eating spicy food </p>
+        </div>
+        <hr>
+        <div class="contact-me">
+            <h2>Get In Touch</h2>
+            <h3>Lorem ipsum dolor sit amet, non elit.</h3>
+            <p>Lorem ipsum dolor sit amet, in quis, aenean amet. Phasellus sodales, tellus donec dui, ornare erat.</p>
+            <a class="btn" href="mailto:name@email.com" style="margin-bottom: 10px;">CONTACT ME</a>
+        </div>
+    </div>
 
-        
 
-        
-        <script src="" async defer></script>
-    </body>
+    <div class="bottom-container">
+        <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
+        <a class="footer-link" href="https://twitter.com/">Twitter</a>
+        <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
+        <p>© Name Surname.</p>
+    </div>
+    <h5 style="font-family:Sacramento;">Created by me</h5>
+
+
+
+
+    <script defer src=""></script>
+    <script src="" async defer></script>
+</body>
+
 </html>
