--- a/index.html
+++ b/index.html
@@ -40,14 +40,14 @@
         <hr>
         <div class="skills">
             <h2>My Skills.</h2>
-            <div class="skill-row">
-                <img class="" src="pattern.gif" style="height:50px; width:50px;" alt="">
+            <div class="skill-row" >
+                <img class="first" src="pattern.gif"  alt="">
                 <h3>Lorem & Ipsum</h3>
                 <p>Lorem ipsum dolor sit amet, quis in duis, iaculis id felis. Consectetuer vestibulum, nunc urna
                     lectus, erat ligula. Hendrerit nam, lectus ante, ut lorem eros.</p>
             </div>
             <div class="skill-row">
-                <img class="" src="images/chili-pepper.png"   alt="" style="height:150px; width:150px;">
+                <img class="second" src="images/chili-pepper.png"   alt="" ">
                 <h3>What I like?</h3>
                 <p>I love eating spicy food </p>
         </div>
@@ -65,7 +65,7 @@
         <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
         <a class="footer-link" href="https://twitter.com/">Twitter</a>
         <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
-        <p>© Name Surname.</p>
+        <p>©2022 Shreyash.</p>
     </div>
     <h5 style="font-family:Sacramento;">Created by me</h5>
 
