--- a/index.html
+++ b/index.html
@@ -24,56 +24,63 @@
     <div class="top-container">
         <img class="top-cloud" src="images/cloud.png" alt="">
         <div class="Name">
-            <h1 style="font-family:'Sacramento', cursive; font-size: 565.25%; margin: 0 auto 0 auto; color: #66BFBF; margin-bottom: 0px;">I'm Shreyash</h1>
+            <h1
+                style="font-family:'Sacramento', cursive; font-size: 565.25%; margin: 0 auto 0 auto; color: #66BFBF; margin-bottom: 0px;">
+                I'm Shreyash</h1>
             <h2 style="font-size: 2.5rem; color:#66BFBF">I like <span class="pro">pro</span>gramming</h2>
         </div>
         <img class="bottom-cloud" src="images/cloud.png" alt="">
         <img class="mountain" src="images/mountain.png" alt="">
     </div>
-    <div class="middle-container">
-        <div class="profile">
-            <img src="boy.png" alt="Me" style="height: 100px; width:100px; margin-top: 50px;">
-            <h2>Hello.</h2>
-            <p>I am Web developer and know languages like C, C++, Python.I am currently learning App Development and besides coding I like to cook and play Badminton
-            </p>
-        </div>
-        <hr>
-        <div class="skills">
-            <h2>My Skills.</h2>
-            <div class="skill-row" >
-                <img class="first" src="pattern.gif"  alt="">
-                <h3>Lorem & Ipsum</h3>
-                <p>Lorem ipsum dolor sit amet, quis in duis, iaculis id felis. Consectetuer vestibulum, nunc urna
-                    lectus, erat ligula. Hendrerit nam, lectus ante, ut lorem eros.</p>
+    
+        <div class="middle-container" style="background-color:#C6E1F1;">
+            <div class="profile">
+                <img src="boy.png" alt="Me" style="height: 100px; width:100px; margin-top: 50px;">
+                <h2 style="font-size :40px;"><strong>Hello.</strong></h2>
+                <p>I am Web developer and know languages like C, C++, Python.I am currently learning App Development and
+                    besides coding I like to cook and play Badminton
+                </p>
             </div>
-            <div class="skill-row">
-                <img class="second" src="images/chili-pepper.png"   alt="" ">
-                <h3>What I like?</h3>
-                <p>I love eating spicy food </p>
+            <hr>
+            <div class="skills">
+                <h2 style="font-size: 40px;"><strong>My skills.</strong></h2>
+                <div class="skill-row">
+                    <img class="first" src="pattern.gif" alt="">
+                    <h3>Coding</h3>
+                    <p>I wrote my first line of code when I was in my 11th grade and as soon as I saw computer following my instructions with just a few lines of command I falled in love with it and have been doing it since then.</p>
+                </div>
+                <div class="skill-row">
+                    <img class="second" src="images/chili-pepper.png" alt="" style="height:200px; width:200px;">
+                    <h3>What I like?</h3>
+                    <p>I love eating spicy food </p>
+                </div>
+                <br>
+                <hr>
         </div>
-        <hr>
-        <div class="contact-me">
+    
+        <div class="contact-me" style="padding:10px;">
             <h2>Get In Touch</h2>
-            <h3>Lorem ipsum dolor sit amet, non elit.</h3>
-            <p>Lorem ipsum dolor sit amet, in quis, aenean amet. Phasellus sodales, tellus donec dui, ornare erat.</p>
-            <a class="btn" href="mailto:name@email.com" style="margin-bottom: 10px;">CONTACT ME</a>
+            <h3>Follow me on my social media to know more about me.</h3>
+            <p style="margin-bottom: 50px;">Thank You for visiting my website!!</p>
+            <a class="btn" href="mailto:name@email.com" ">CONTACT ME</a>
         </div>
-    </div>
-
-
-    <div class="bottom-container">
-        <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
-        <a class="footer-link" href="https://twitter.com/">Twitter</a>
-        <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
-        <p>©2022 Shreyash.</p>
-    </div>
-    <h5 style="font-family:Sacramento;">Created by me</h5>
 
 
 
 
-    <script defer src=""></script>
-    <script src="" async defer></script>
+        <div class="bottom-container" style="background-color:#AAAAFF; margin-top: 50px;">
+            <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
+            <a class="footer-link" href="https://twitter.com/">Twitter</a>
+            <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
+            <p style="font-size: 10px; position:relative; top: 10px;">©2022 Shreyash.</p>
+            <h5 style="font-family:Sacramento;">Created by me</h5>
+        </div>
+
+
+
+
+        <script defer src=""></script>
+        <script src="" async defer></script>
 </body>
 
 </html>
