--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <h2>Get In Touch</h2>
             <h3>Follow me on my social media to know more about me.</h3>
             <p style="margin-bottom: 50px;">Thank You for visiting my website!!</p>
-            <a class="btn" href="mailto:name@email.com" ">CONTACT ME</a>
+            <a class="btn" href="mailto:shreyashtekade2503@gmail.com" ">CONTACT ME</a>
         </div>
 
 
