--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <h2>Get In Touch</h2>
             <h3>Follow me on my social media to know more about me.</h3>
             <p style="margin-bottom: 50px;">Thank You for visiting my website!!</p>
-            <a class="btn" href="mailto:name@email.com" ">CONTACT ME</a>
+            <a class="btn" href="mailto:shreyashtekade2503@gmail.com" ">CONTACT ME</a>
         </div>
 
 
@@ -71,7 +71,7 @@
         <div class="bottom-container" style="background-color:#AAAAFF; margin-top: 50px;">
             <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
             <a class="footer-link" href="https://twitter.com/">Twitter</a>
-            <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
+            <a class="footer-link" href="https://www.appbrewery.co/">Instgram</a>
             <p style="font-size: 10px; position:relative; top: 10px;">©2022 Shreyash.</p>
             <h5 style="font-family:Sacramento;">Created by me</h5>
         </div>
